# vision_dev_env

./: .gitignore  ReadMe.md  docker-compose.yml  dockerfile
src/Annottation/images/train/: printed_ammunition021.xml  printed_ammunition025.xml  printed_ammunition_outdoor0120.txt  printed_ammunition_outdoor018.txt  printed_ammunition_outdoor018.xml  printed_ammunition_outdoor041.txt  printed_ammunition_outdoor041.xml  printed_ammunition_outdoor045.txt  printed_ammunition_outdoor051.xml  printed_ammunition_outdoor0527.txt  printed_ammunition_outdoor0740.txt  printed_ammunition_outdoor0740.xml
src/Annottation/images/val/: printed_ammunition0233.txt  printed_ammunition0233.xml  printed_ammunition0248.txt  printed_ammunition_outdoor021.txt  printed_ammunition_outdoor056.txt  printed_ammunition_outdoor056.xml  printed_ammunition_outdoor0680.txt
src/Annottation/images2/train/: new_printed_ammunition100.xml  new_printed_ammunition12.xml  new_printed_ammunition14.txt  new_printed_ammunition14.xml  new_printed_ammunition17.txt  new_printed_ammunition17.xml  new_printed_ammunition18.xml  new_printed_ammunition23.xml  new_printed_ammunition35.xml  (+31 more)
src/camera_position/: CMakeLists.txt  package.xml
src/camera_position/src/: camera_position.cpp  get_distance.cpp  node_with_message_filter.cpp
src/camera_test/: package.xml  setup.py
src/camera_test/camera_test/: pipe_node.py
src/scripts/: get_images.py
src/yolo_ros/yolov8_obb/: CMakeLists.txt
src/yolov8obb_training/: format_converter.py  train_info.yaml  yolov8_obb_inference.py  yolov8_obb_train.py  yolov8_obb_webcam.py
(+102 files in other folders)
